# text-splitter

./: .gitignore  README.md  package.json
.github/workflows/: publish.yml
rust/text-splitter/: Cargo.toml
rust/text-splitter/src/: main.rs
text-splitter/Data/: sample.txt
text-splitter/Documentation/Classes/: _text_splitter_Controller.md  text_splitter.md
text-splitter/Project/Sources/: catalog.4DCatalog  settings.4DSettings
text-splitter/Project/Sources/Classes/: _CLI.4dm  _CLI_Controller.4dm  _text_splitter_Controller.4dm  text_splitter.4dm
text-splitter/Project/Sources/Methods/: TEST_text_splitter.4dm
text-splitter/Resources/en.lproj/: syntaxEN.json
