[package]
name = "text-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-splitter = { version = "0.27", features = ["markdown", "tiktoken-rs", "tokenizers"] }
tiktoken-rs = "0.7"
tokenizers = { version = "0.22", features = ["http"] }
